fix(dashboard): change card spacing

--- a/www/scss/views/back/_dashboard.scss
+++ b/www/scss/views/back/_dashboard.scss
@@ -12,7 +12,8 @@
   }
   .cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: em(16);
     flex-direction: row;
     flex-wrap: wrap;
   }
